# rinha2024

./: .python-version  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/rinha2024/: __init__.py
src/rinha2024/adapters/: client_repository.py  errors.py  transaction_repository.py
src/rinha2024/app/: __init__.py
src/rinha2024/app/adapters/: in_memory_client_repository.py  in_memory_transaction_repository.py  postgres_client_repository.py  postgres_transaction_repository.py
src/rinha2024/app/controllers/: get_bank_statement_controller.py  make_transaction_controller.py  orjson_response.py
src/rinha2024/core/entities/: client.py  entity.py  transaction.py
